src/ref/raylib.h

    typedef enum bool { false, true } bool;
typedef struct Vector2 {
    float x;                
    float y;                
} Vector2;
typedef struct Vector3 {
    float x;                
    float y;                
    float z;                
} Vector3;
typedef struct Matrix {
    float m0, m4, m8, m12;  
    float m1, m5, m9, m13;  
    float m2, m6, m10, m14; 
    float m3, m7, m11, m15; 
} Matrix;
typedef struct Color {
    unsigned char r;        
    unsigned char g;        
    unsigned char b;        
    unsigned char a;        
} Color;
typedef struct Rectangle {
    float x;                
    float y;                
    float width;            
    float height;           
} Rectangle;
typedef struct Image {
    void *data;             
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Image;
typedef struct Texture {
    unsigned int id;        
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Texture;
typedef Texture Texture2D;
typedef Camera3D Camera;    
typedef struct Mesh {
    int vertexCount;        
    int triangleCount;      
    float *vertices;        
    float *texcoords;       
    float *texcoords2;      
    float *normals;         
    float *tangents;        
    unsigned char *colors;      
    unsigned short *indices;    
    float *animVertices;    
    float *animNormals;     
    unsigned char *boneIds; 
    float *boneWeights;     
    unsigned int vaoId;     
    unsigned int *vboId;    
} Mesh;
typedef struct Shader {
    unsigned int id;        
    int *locs;              
} Shader;
typedef struct MaterialMap {
    Texture2D texture;      
    Color color;            
    float value;            
} MaterialMap;
typedef struct Material {
    Shader shader;          
    MaterialMap *maps;      
    float params[4];        
} Material;
typedef struct Transform {
    Vector3 translation;    
    Quaternion rotation;    
    Vector3 scale;          
} Transform;
typedef struct BoneInfo {
    char name[32];          
    int parent;             
} BoneInfo;
typedef struct Model {
    Matrix transform;       
    int meshCount;          
    int materialCount;      
    Mesh *meshes;           
    Material *materials;    
    int *meshMaterial;      
    int boneCount;          
    BoneInfo *bones;        
    Transform *bindPose;    
} Model;
typedef struct ModelAnimation {
    int boneCount;          
    int frameCount;         
    BoneInfo *bones;        
    Transform **framePoses; 
} ModelAnimation;
typedef struct Ray {
    Vector3 position;       
    Vector3 direction;      
} Ray;
typedef struct RayCollision {
    bool hit;               
    float distance;         
    Vector3 point;          
    Vector3 normal;         
} RayCollision;
typedef struct BoundingBox {
    Vector3 min;            
    Vector3 max;            
} BoundingBox;
typedef struct Wave {
    unsigned int frameCount;    
    unsigned int sampleRate;    
    unsigned int sampleSize;    
    unsigned int channels;      
    void *data;                 
} Wave;
typedef struct rAudioBuffer rAudioBuffer;
typedef struct AudioStream {
    rAudioBuffer *buffer;       
    unsigned int sampleRate;    
    unsigned int sampleSize;    
    unsigned int channels;      
} AudioStream;
typedef struct Sound {
    AudioStream stream;         
    unsigned int frameCount;    
} Sound;
typedef struct Music {
    AudioStream stream;         
    unsigned int frameCount;    
    bool looping;               
    int ctxType;                
    void *ctxData;              
} Music;
RLAPI void DrawModel(Model model, Vector3 position, float scale, Color tint);                           
RLAPI void DrawModelEx(Model model, Vector3 position, Vector3 rotationAxis, float rotationAngle, Vector3 scale, Color tint); 
RLAPI void DrawModelWires(Model model, Vector3 position, float scale, Color tint);                      
RLAPI void DrawModelWiresEx(Model model, Vector3 position, Vector3 rotationAxis, float rotationAngle, Vector3 scale, Color tint); 
RLAPI void DrawBoundingBox(BoundingBox box, Color color);                                               
RLAPI void DrawBillboard(Camera camera, Texture2D texture, Vector3 position, float size, Color tint);   
RLAPI void DrawBillboardRec(Camera camera, Texture2D texture, Rectangle source, Vector3 position, Vector2 size, Color tint); 
RLAPI void DrawBillboardPro(Camera camera, Texture2D texture, Rectangle source, Vector3 position, Vector3 up, Vector2 size, Vector2 origin, float rotation, Color tint); 
RLAPI void UploadMesh(Mesh *mesh, bool dynamic);                                            
RLAPI void UpdateMeshBuffer(Mesh mesh, int index, void *data, int dataSize, int offset);    
RLAPI void UnloadMesh(Mesh mesh);                                                           
RLAPI void DrawMesh(Mesh mesh, Material material, Matrix transform);                        
RLAPI void DrawMeshInstanced(Mesh mesh, Material material, Matrix *transforms, int instances); 
RLAPI bool ExportMesh(Mesh mesh, const char *fileName);                                     
RLAPI BoundingBox GetMeshBoundingBox(Mesh mesh);                                            
RLAPI void GenMeshTangents(Mesh *mesh);                                                     
RLAPI void GenMeshBinormals(Mesh *mesh);                                                    
RLAPI Mesh GenMeshPoly(int sides, float radius);                                            
RLAPI Mesh GenMeshPlane(float width, float length, int resX, int resZ);                     
RLAPI Mesh GenMeshCube(float width, float height, float length);                            
RLAPI Mesh GenMeshSphere(float radius, int rings, int slices);                              
RLAPI Mesh GenMeshHemiSphere(float radius, int rings, int slices);                          
RLAPI Mesh GenMeshCylinder(float radius, float height, int slices);                         
RLAPI Mesh GenMeshCone(float radius, float height, int slices);                             
RLAPI Mesh GenMeshTorus(float radius, float size, int radSeg, int sides);                   
RLAPI Mesh GenMeshKnot(float radius, float size, int radSeg, int sides);                    
RLAPI Mesh GenMeshHeightmap(Image heightmap, Vector3 size);                                 
RLAPI Mesh GenMeshCubicmap(Image cubicmap, Vector3 cubeSize);                               
RLAPI Material *LoadMaterials(const char *fileName, int *materialCount);                    
RLAPI Material LoadMaterialDefault(void);                                                   
RLAPI void UnloadMaterial(Material material);                                               
RLAPI void SetMaterialTexture(Material *material, int mapType, Texture2D texture);          
RLAPI void SetModelMeshMaterial(Model *model, int meshId, int materialId);                  
RLAPI ModelAnimation *LoadModelAnimations(const char *fileName, unsigned int *animCount);   
RLAPI void UpdateModelAnimation(Model model, ModelAnimation anim, int frame);               
RLAPI void UnloadModelAnimation(ModelAnimation anim);                                       
RLAPI bool IsModelAnimationValid(Model model, ModelAnimation anim);                         
RLAPI bool CheckCollisionSpheres(Vector3 center1, float radius1, Vector3 center2, float radius2);       
RLAPI bool CheckCollisionBoxes(BoundingBox box1, BoundingBox box2);                                     
RLAPI bool CheckCollisionBoxSphere(BoundingBox box, Vector3 center, float radius);                      
RLAPI RayCollision GetRayCollisionSphere(Ray ray, Vector3 center, float radius);                        
RLAPI RayCollision GetRayCollisionBox(Ray ray, BoundingBox box);                                        
RLAPI RayCollision GetRayCollisionQuad(Ray ray, Vector3 p1, Vector3 p2, Vector3 p3, Vector3 p4);        
RLAPI void InitAudioDevice(void);                                     
RLAPI void CloseAudioDevice(void);                                    
RLAPI bool IsAudioDeviceReady(void);                                  
RLAPI void SetMasterVolume(float volume);                             
RLAPI Wave LoadWave(const char *fileName);                            
RLAPI Wave LoadWaveFromMemory(const char *fileType, const unsigned char *fileData, int dataSize); 
RLAPI Sound LoadSound(const char *fileName);                          
RLAPI Sound LoadSoundFromWave(Wave wave);                             
RLAPI void UpdateSound(Sound sound, const void *data, int sampleCount); 
RLAPI void UnloadWave(Wave wave);                                     
RLAPI void UnloadSound(Sound sound);                                  
RLAPI bool ExportWave(Wave wave, const char *fileName);               
RLAPI bool ExportWaveAsCode(Wave wave, const char *fileName);         
RLAPI void PlaySound(Sound sound);                                    
RLAPI void StopSound(Sound sound);                                    
RLAPI void PauseSound(Sound sound);                                   
RLAPI void ResumeSound(Sound sound);                                  
RLAPI void PlaySoundMulti(Sound sound);                               
RLAPI void StopSoundMulti(void);                                      
RLAPI int GetSoundsPlaying(void);                                     
RLAPI bool IsSoundPlaying(Sound sound);                               
RLAPI void SetSoundVolume(Sound sound, float volume);                 
RLAPI void SetSoundPitch(Sound sound, float pitch);                   
RLAPI void WaveFormat(Wave *wave, int sampleRate, int sampleSize, int channels);  
RLAPI Wave WaveCopy(Wave wave);                                       
RLAPI void WaveCrop(Wave *wave, int initSample, int finalSample);     
RLAPI float *LoadWaveSamples(Wave wave);                              
RLAPI void UnloadWaveSamples(float *samples);                         
RLAPI Music LoadMusicStream(const char *fileName);                    
RLAPI Music LoadMusicStreamFromMemory(const char *fileType, unsigned char *data, int dataSize); 
RLAPI void UnloadMusicStream(Music music);                            
RLAPI void PlayMusicStream(Music music);                              
RLAPI bool IsMusicStreamPlaying(Music music);                         
RLAPI void UpdateMusicStream(Music music);                            
RLAPI void StopMusicStream(Music music);                              
RLAPI void PauseMusicStream(Music music);                             
RLAPI void ResumeMusicStream(Music music);                            
RLAPI void SeekMusicStream(Music music, float position);              
RLAPI void SetMusicVolume(Music music, float volume);                 
RLAPI void SetMusicPitch(Music music, float pitch);                   
RLAPI float GetMusicTimeLength(Music music);                          
RLAPI float GetMusicTimePlayed(Music music);                          