src/ref/raylib3.0.h


typedef enum {
    MAP_ALBEDO    = 0,       
    MAP_METALNESS = 1,       
    MAP_NORMAL    = 2,
    MAP_ROUGHNESS = 3,
    MAP_OCCLUSION,
    MAP_EMISSION,
    MAP_HEIGHT,
    MAP_CUBEMAP,             
    MAP_IRRADIANCE,          
    MAP_PREFILTER,           
    MAP_BRDF
} MaterialMapType;
#define MAP_DIFFUSE      MAP_ALBEDO
#define MAP_SPECULAR     MAP_METALNESS