src/ref/RayLib.pas


  // Draw a model (with texture if set)
  DrawModel: procedure(model: TModel; position: TVector3; scale: Single; tint: TColor); cdecl;
  // Draw a model with extended parameters
  DrawModelEx: procedure(model: TModel; position: TVector3; rotationAxis: TVector3; rotationAngle: Single; scale: TVector3; tint: TColor); cdecl;
  // Draw a model wires (with texture if set)
  DrawModelWires: procedure(model: TModel; position: TVector3; scale: Single; tint: TColor); cdecl;
  // Draw a model wires (with texture if set) with extended parameters
  DrawModelWiresEx: procedure(model: TModel; position: TVector3; rotationAxis: TVector3; rotationAngle: Single; scale: TVector3; tint: TColor); cdecl;
  // Draw bounding box (wires)
  DrawBoundingBox: procedure(box: TBoundingBox; color: TColor); cdecl;
  // Draw a billboard texture
  DrawBillboard: procedure(camera: TCamera; texture: TTexture2D; center: TVector3; size: Single; tint: TColor); cdecl;
  // Draw a billboard texture defined by sourceRec
  DrawBillboardRec: procedure(camera: TCamera; texture: TTexture2D; source: TRectangle; center: TVector3; size: Single; tint: TColor); cdecl;
  // Draw a billboard texture defined by source and rotation
  DrawBillboardPro: procedure(camera: TCamera; Texture: TTexture2D; source: TRectangle; position: tVector3; up: TVector3; size: TVector2; origin: TVector2; Rotation: Single; tint: TColor); cdecl;

  // Mesh management functions
  // Upload mesh vertex data in GPU and provide VAO/VBO ids
  UploadMesh: procedure(mesh: PMesh; Dynamic: Boolean); cdecl;
  // Update mesh vertex data in GPU for a specific buffer index
  UpdateMeshBuffer: procedure(mesh: TMesh; index: Integer; data: PByte; dataSize: Integer; offset: Integer); cdecl;
  // Unload mesh data from CPU and GPU
  UnloadMesh: procedure(mesh: TMesh); cdecl;
  // Draw a 3d mesh with material and transform
  DrawMesh: procedure(mesh: TMesh; material: TMaterial; transform: TMatrix); cdecl;
  // Draw multiple mesh instances with material and different transforms
  DrawMeshInstanced: procedure(Mesh: TMesh; Material: TMaterial; transforms: PMatrix; instances: Integer); cdecl;
  // Export mesh data to file, returns true on success
  ExportMesh: function(Mesh: TMesh; fileName: PUTF8Char): Boolean; cdecl;
  // Compute mesh bounding box limits
  GetMeshBoundingBox: function(Mesh: TMesh): TBoundingBox; cdecl;
  // Compute mesh tangents
  GenMeshTangents: procedure(Mesh: PMesh); cdecl;
  // Compute mesh binormals
  GenMeshBinormals: procedure(Mesh: PMesh); cdecl;

  { Mesh generation functions }

  // Generate polygonal mesh
  GenMeshPoly: function(sides: Integer; radius: Single): TMesh; cdecl;
  // Generate plane mesh (with subdivisions)
  GenMeshPlane: function(width: Single; length: Single; resX: Integer; resZ: Integer): TMesh; cdecl;
  // Generate cuboid mesh
  GenMeshCube: function(width: Single; height: Single; length: Single): TMesh; cdecl;
  // Generate sphere mesh (standard sphere)
  GenMeshSphere: function(radius: Single; rings: Integer; slices: Integer): TMesh; cdecl;
  // Generate half-sphere mesh (no bottom cap)
  GenMeshHemiSphere: function(radius: Single; rings: Integer; slices: Integer): TMesh; cdecl;
  // Generate cylinder mesh
  GenMeshCylinder: function(radius: Single; height: Single; slices: Integer): TMesh; cdecl;
  // Generate cone/pyramid mesh
  GenMeshCone: function(radius: Single; height: Single; slices: Integer): TMesh; cdecl;
  // Generate torus mesh
  GenMeshTorus: function(radius: Single; size: Single; radSeg: Integer; sides: Integer): TMesh; cdecl;
  // Generate trefoil knot mesh
  GenMeshKnot: function(radius: Single; size: Single; radSeg: Integer; sides: Integer): TMesh; cdecl;
  // Generate heightmap mesh from image data
  GenMeshHeightmap: function(heightmap: TImage; size: TVector3): TMesh; cdecl;
  // Generate cubes-based map mesh from image data
  GenMeshCubicmap: function(cubicmap: TImage; cubeSize: TVector3): TMesh; cdecl;

  { Material loading/unloading functions }

  // Load materials from model file
  LoadMaterials: function(const fileName: PUTF8Char; materialCount: PInteger): PMaterial; cdecl;
  // Load default material (Supports: DIFFUSE, SPECULAR, NORMAL maps)
  LoadMaterialDefault: function: TMaterial; cdecl;
  // Unload material from GPU memory (VRAM)
  UnloadMaterial: procedure(material: TMaterial); cdecl;
  // Set texture for a material map type (MAP_DIFFUSE, MAP_SPECULAR...)
  SetMaterialTexture: procedure(material: PMaterial; mapType: Integer; texture: TTexture2D); cdecl;
  // Set material for a mesh
  SetModelMeshMaterial: procedure(model: PModel; meshId: Integer; materialId: Integer); cdecl;

  { Model animations loading/unloading functions }

  // Load model animations from file
  LoadModelAnimations: function(const fileName: PUTF8Char; animsCount: PInteger): PModelAnimation; cdecl;
  // Update model animation pose
  UpdateModelAnimation: procedure(model: TModel; anim: TModelAnimation; frame: Integer); cdecl;
  // Unload animation data
  UnloadModelAnimation: procedure(anim: TModelAnimation); cdecl;
  // Check model animation skeleton match
  IsModelAnimationValid: function(model: TModel; anim: TModelAnimation): Boolean; cdecl;

  { Collision detection functions }

  // Check collision between two spheres
  CheckCollisionSpheres: function(centerA: TVector3; radiusA: Single; centerB: TVector3; radiusB: Single): Boolean; cdecl;
  // Check collision between two bounding boxes
  CheckCollisionBoxes: function(box1: TBoundingBox; box2: TBoundingBox): Boolean; cdecl;
  // Check collision between box and sphere
  CheckCollisionBoxSphere: function(box: TBoundingBox; center: TVector3; radius: Single): Boolean; cdecl;
  // Get collision info between ray and sphere
  GetRayCollisionSphere: function(ray: TRay; center: TVector3; radius: Single): TRayCollision; cdecl;
  // Get collision info between ray and box
  GetRayCollisionBox: function(ray: TRay; box: TBoundingBox): TRayCollision; cdecl;
  // Get collision info between ray and model
  GetRayCollisionRayModel: function(ray: TRay; model: TModel): TRayCollision; cdecl;
  // Get collision info between ray and mesh
  GetRayCollisionRayMesh: function(ray: TRay; mesh: TMesh; transform: TMatrix): TRayCollision; cdecl;
  // Get collision info between ray and triangle
  GetRayCollisionRayTriangle: function(ray: TRay; p1: TVector3; p2: TVector3; p3: TVector3): TRayCollision; cdecl;
  // Get collision info between ray and quad
  GetRayCollisionQuad: function(ray: TRay; p1: TVector3; p2: TVector3; p3: TVector3; p4: TVector3): TRayCollision;  cdecl;

//------------------------------------------------------------------------------------
// Audio Loading and Playing Functions (Module: audio)
//------------------------------------------------------------------------------------

  { Audio device management functions }

  // Initialize audio device and context
  InitAudioDevice: procedure; cdecl;
  // Close the audio device and context
  CloseAudioDevice: procedure; cdecl;
  // Check if audio device has been initialized successfully
  IsAudioDeviceReady: function: Boolean; cdecl;
  // Set master volume (listener)
  SetMasterVolume: procedure(volume: Single); cdecl;

  { Wave/Sound loading/unloading functions }

  // Load wave data from file
  LoadWave: function(const fileName: PUTF8Char): TWave; cdecl;
  // Load wave from memory buffer, fileType refers to extension: i.e. "wav"
  LoadWaveFromMemory: function(const fileType: PUTF8Char; fileData: PByte; dataSize: Integer): TImage; cdecl;
  // Load sound from file
  LoadSound: function(const fileName: PUTF8Char): TSound; cdecl;
  // Load sound from wave data
  LoadSoundFromWave: function(wave: TWave): TSound; cdecl;
  // Update sound buffer with new data
  UpdateSound: procedure(sound: TSound; const data: Pointer; sampleCount: Integer); cdecl;
  // Unload wave data
  UnloadWave: procedure(wave: TWave); cdecl;
  // Unload sound
  UnloadSound: procedure(sound: TSound); cdecl;
  // Export wave data to file
  ExportWave: function(wave: TWave; const fileName: PUTF8Char): Boolean; cdecl;
  // Export wave sample data to code (.h)
  ExportWaveAsCode: function(wave: TWave; const fileName: PUTF8Char): Boolean; cdecl;

  { Wave/Sound management functions }

  // Play a sound
  PlaySound: procedure(Sound: TSound); cdecl;
  // Stop playing a sound
  StopSound: procedure(Sound: TSound); cdecl;
  // Pause a sound
  PauseSound: procedure(Sound: TSound); cdecl;
  // Resume a paused sound
  ResumeSound: procedure(Sound: TSound); cdecl;
  // Play a sound (using multichannel buffer pool)
  PlaySoundMulti: procedure(Sound: TSound); cdecl;
  // Stop any sound playing (using multichannel buffer pool)
  StopSoundMulti: procedure; cdecl;
  // Get number of sounds playing in the multichannel
  GetSoundsPlaying: function: Integer; cdecl;
  // Check if a sound is currently playing
  IsSoundPlaying: function(Sound: TSound): Boolean; cdecl;
  // Set volume for a sound (1.0 is max level)
  SetSoundVolume: procedure(Sound: TSound; volume: Single); cdecl;
  // Set pitch for a sound (1.0 is base level)
  SetSoundPitch: procedure(Sound: TSound; pitch: Single); cdecl;
  // Convert wave data to desired format
  WaveFormat: procedure(Wave: PWave; sampleRate: Integer; sampleSize: Integer; channels: Integer); cdecl;
  // Copy a wave to a new wave
  WaveCopy: function(Wave: TWave): TWave; cdecl;
  // Crop a wave to defined samples range
  WaveCrop: procedure(Wave: PWave; initSample: Integer; finalSample: Integer); cdecl;
  // Get samples data from wave as a floats array
  LoadWaveSamples: function(Wave: TWave): PSingle; cdecl;
  // Unload samples data loaded with LoadWaveSamples()
  UnloadWaveSamples: procedure(samples: PSingle); cdecl;

  { Music management functions }

  // Load music stream from file
  LoadMusicStream: function(const FileName: PUTF8Char): TMusic; cdecl;
  // Load music stream from data
  LoadMusicStreamFromMemory: function(fileType: PUTF8Char; data:PByte; dataSize: Integer): TMusic; cdecl;
  // Unload music stream
  UnloadMusicStream: procedure(Music: TMusic); cdecl;
  // Start music playing
  PlayMusicStream: procedure(Music: TMusic); cdecl;
  // Check if music is playing
  IsMusicStreamPlaying:function(music: TMusic): Boolean; cdecl;
  // Updates buffers for music streaming
  UpdateMusicStream: procedure(Music: TMusic); cdecl;
  // Stop music playing
  StopMusicStream: procedure(Music: TMusic); cdecl;
  // Pause music playing
  PauseMusicStream: procedure(Music: TMusic); cdecl;
  // Resume playing paused music
  ResumeMusicStream: procedure(Music: TMusic); cdecl;
  // Seek music to a position (in seconds)
  SeekMusicStream: procedure(music:TMusic; position: Single);
  // Set volume for music (1.0 is max level)
  SetMusicVolume: procedure(Music: TMusic; volume: Single); cdecl;
  // Set pitch for a music (1.0 is base level)
  SetMusicPitch: procedure(Music: TMusic; pitch: Single); cdecl;
  // Get music time length (in seconds)
  GetMusicTimeLength: function(Music: TMusic): Single; cdecl;
  // Get current music time played (in seconds)
  GetMusicTimePlayed: function(Music: TMusic): Single; cdecl;

  { AudioStream management functions }
